# MLOps_Labs

./: .gitignore  README.md
GCP/: README.md  create_group.md
lab01/: README.md  env.yaml  lab01a_01_tensor_tutorial.ipynb  lab01a_02_autograd_tutorial.ipynb  lab01a_03_neural_networks_tutorial.ipynb  lab01a_04_cifar10_tutorial.ipynb  lab01b.ipynb  lab01c.ipynb  lab01c_sol.ipynb  pyproject.toml
lab01/src/: util.py
lab01/src/data/: base_data_module.py  mnist.py  util.py
lab01/src/metadata/: mnist.py
lab01/src/models/: cnn.py
lab01/src/stems/: image.py
lab02/: README.md  env.yaml  main.py  pyproject.toml  streamlit_chatbot.md  streamlit_uis.md
lab02/notebooks/: langchain.ipynb  transformers.ipynb  transformers_solution.ipynb
lab02/snippets/: check_and_select.py  dataframe.py  layout.py  magic.py  nomagic.py  parrot_bot.py  styled_dataframe.py
lab03/: README.md  compose.yml  diffusion.ipynb  env.yaml  main.py  mlflow_tracking.ipynb  pyproject.toml  ray_tune.ipynb  ray_tune_solution.ipynb  requirements.txt
lab03/data/: zhaw_logo.csv
lab04/: 01_introduction_to_cicd.md  02_introduction_to_pytest.md  03_testing_models.md  04_verifying_models.md  README.md  env.yaml  main.py  pyproject.toml
lab05/: README.md  env.yaml  main.py  pyproject.toml  requirements.txt
lab06/: README.md  apply_augmentation.py  dvc.md  env.yaml  git_lfs.md  main.py  requirements.txt
lab07/: README.md  alibi_detect.md  env.yaml  inference.py  main.py  mlserver.md  outliers_attacks_drifts.md  requirements.txt
project/: README.md  create_group.md
sample/: env.yaml  readme.md
(+37 files in other folders)
