[project]
name = "lab03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmdstanpy==1.2.4",
    "data-morph-ai==0.2.0",
    "gpy>=1.13",
    "hebo==0.3.6",
    "jupyter>=1.1.1",
    "mlflow==2.20.0",
    "prophet==1.1.6",
    "ray[tune]==2.41.0",
    "torch==2.6.0",
]
